class Strings {
  /// Login
  static const String loginString = 'Login';
  static const String loginInformasiString = 'Informasi';
  static const String loginPerhatianAlertGetApiKeyString = 'Perhatian';
  static const String loginPerhatianBodyAlertGetApiKeyString= 'Maaf server kami sedang dalam kendala, mohon tutup applikasi anda dan coba lagi di lain waktu!!!';
  static const String loginPerhatianButtonOkString = 'OK';
  static const String loginNamaPenggunaString = 'Nama Pengguna';
  static const String loginGantiAkun = 'Ganti Akun';
  static const String loginKataSandiString = 'Kata Sandi';
  static const String loginLupaNamaPenggunaAtauKataSandiString = 'Lupa Nama Pengguna atau\n Kata Sandi ?';
  static const String loginAssalamualaikumString = 'Assalamualaikum';
  
  /// Lupa Nama Pengguna dan Kata Sandi
  static const String lupaNamaPenggunaAtauKataSandiNamaPenggunaBody = 'Fitur lupa nama pengguna digunakan untuk \nmeninjau nama pengguna yang terdaftar di \napplikasi';
  static const String lupaNamaPenggunaAtauKataSandiKataSandiBody = 'Fitur lupa kata sandi digunakan untuk \nmembuat ulang kata sandi dan buka blokir \nakun applikasi';
  static const String lupaNamaPenggunaAtauKataSandiLanjutkan = 'Lanjutkan';

  /// Lupa Nama Pengguna
  static const String lupaNamaPenggunaTitle = 'Lupa Nama Pengguna';
  static const String lupaNamaPenggunaDataAkun = 'Data Akun';
  static const String lupaNamaPenggunaPastikanData = 'Pastikan data yang Anda isi di bawah ini terdaftar \ndi dalam aplikasi';
  static const String lupaNamaPenggunaDataYangAndaMasukanSalah = 'Data yang anda masukan salah, silahkan coba kembali !';
  static const String lupaNamaPenggunaNomorKtp = 'Nomor KTP';
  static const String lupaNamaPenggunaNamaIbuKandung = 'Nama ibu kandung';
  static const String lupaNamaPenggunaNomorRekening = 'Nomor Rekening Bank';

  /// Lupa kata sandi
  static const String lupaKataSandiTitle = 'Lupa Kata Sandi';
  static const String lupaKataSandiTanggalLahir = 'Tanggal lahir';

  /// Navigation Bar
  static const String navigationBarBeranda = 'Beranda';
  static const String navigationBarRekening = 'Rekening';
  static const String navigationBarNotifikasi = 'Notifikasi';
  static const String navigationBarAkun = 'Akun';

  /// Beranda
  static const String berandaAssalamualaikum = 'Assalamualaikum';
  static const String berandaSelengkapnya = 'Selengkapnya';
  static const String berandaNoRekeningUtama = 'No.Rekening utama';
  static const String berandaSaldo = 'Saldo';
  static const String berandaMutasiSelengkapnya = 'Mutasi Selengkapnya';

  /// MutasiBeranda
  static const String mutasiBerandaTitle = 'Mutasi';
  static const String mutasiBerandaTabunganSimpati = 'Tabungan Simpati';
  static const String mutasiBerandaInformasiRekening = 'Informasi Rekening';

  /// Layanan
  static const String layananTitle = 'Layanan';

  /// rekening
  static const String rekeningTitle = 'Rekening';
  static const String rekeningKeuanganSimpanan = 'Simpanan';
  static const String rekeningKeuanganSimpananKosong = 'SimpananKosong';
  static const String rekeningKeuanganSimpananBerjangka = 'Simpanan \nBerjangka';
  static const String rekeningKeuanganSimpananBerjangkaKosong = 'Simpanan Berjangka Kosong';
  static const String rekeningKeuanganPembiayaan = 'Pembiayaan';
  static const String rekeningKeuanganPembiayaanKosong = 'Pembiayaan Kosong';
  static const String rekeningMutasiTabunganSimpatiTitle = 'Mutasi Tabungan Simpati';
  static const String rekeningMutasiSimpananPokokTitle = 'Mutasi Simpanan Pokok';
  static const String rekeningMutasiSimpananWajibTitle = 'Mutasi Simpanan Wajib';
  static const String rekeningInformasiRekening = 'Informasi Rekening';

  /// notifikasi
  static const String notifikasiTitle = 'Notifikasi';

  /// akun
  static const String akunTitle = 'Akun';
  /// akun card_bantuan
  static const String akunSyaratDanKetentuan = 'Syarat dan Ketentuan';
  static const String akunPusatBantuan = 'Pusat Bantuan';
  static const String akunHubungiKami = 'Hubungi Kami';
  /// akun card_informasi_mutasi
  static const String akunInfoKurs = 'Info Kurs';
  static const String akunLokasiAtm = 'Lokasi ATM';
  static const String akunLokasiKantor = 'Lokasi Kantor';
  /// akun card_pengaturan
  static const String akunUpdateAkun = 'Update Akun';
  static const String akunKeamanan = 'Keamanan';
  static const String akunMenuKilat = 'Menu Kilat';
  /// akun card_ganti
  static const String akunGantiKataSandi = 'Ganti Kata Sandi';
  static const String akunFingerPrint = 'Biometric finger print';
  static const String akunGantiRekeningWallet = 'Ganti rekening wallet';

  /// akunProfile
  static const String akunProfileTitle = 'Profile';
  static const String akunPengaturan = 'Pengaturan';
}