...
                      children: [
                        CostumeTextFieldLogin(
                          loginViewModel: loginViewModel,
                          berandaModel: berandaModel,
                          namaPenggunaController: usernameController,
                          kataSandiController: passwordController,
                          keyLoginButton: const Key('loginButton'),
                          keyUsernameField: const Key('namaPengguna'),
                          keyPasswordField: const Key('kataSandi'),
                          keyIconEye: const Key('buttonIconEye'),
                          keyGantiAkunButton: const Key('gantiAkunButton'),
                          keyAlertOkKoneksiTerputus: const Key('buttonOkAlertKoneksiTerputus'),
                          keyAlertOkNamaPenggunaDanKataSandiSalah: const Key('buttonOkAlertNamaPenggunaDanKataSandiSalah'),
                          keyAlertOkGagalLogout: const Key('buttonOkAlertGagalLogout'),
                          keyCostumeTextFieldLogin: const Key('costumeTextFieldLoginKey'),
...
