...
          }
        },
        child: Scaffold(
            appBar: AppBar(
              backgroundColor: LightAndDarkMode.primaryColor(context),
              leading: IconButton(
                  key: const Key('arrowKembaliKeBeranda'),
                  onPressed: () {
                    Navigator.pushReplacementNamed(
                        context,
                        RoutePaths.navigationBarCustome,
                        arguments: loginViewModel.loginModel
                    );
...
