...
            Navigator.pushReplacementNamed(context, RoutePaths.navigationBarCustome);
          }
        },
      child: Scaffold(
        appBar: AppBar(
          leading: IconButton(
              key: const Key('arrowKembaliKeNavigationBottomBar'),
              onPressed: () {
                Navigator.pushReplacementNamed(context,RoutePaths.navigationBarCustome);
              },
              icon: const Icon(
                size: 22,
                Icons.arrow_back,
...
